[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
lazy-regex = "2"

[dev-dependencies]
anyhow = "1.0.71"
httpc-test = "0.1.1"
